
INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}"
  )

SET(
  CYCLOPTS_INCLUDE_DIRS ${CYCLOPTS_INCLUDE_DIRS}
  "${CMAKE_CURRENT_SOURCE_DIR}"
  PARENT_SCOPE
  )

SET(
  CYCLOPTS_SRC ${CYCLOPTS_SRC} 
  "${CMAKE_CURRENT_SOURCE_DIR}/distributions.cc"
  PARENT_SCOPE
  )

INSTALL(
  FILES
  distributions.h
  DESTINATION include/cyclopts
  COMPONENT cyclopts
)