
INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}"
  )

SET(
  CYCLOPTS_INCLUDE_DIRS ${CYCLOPTS_INCLUDE_DIRS}
  "${CMAKE_CURRENT_SOURCE_DIR}"
  PARENT_SCOPE
  )

FILE(GLOB src_files "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")
SET(
  CYCLOPTS_SRC ${CYCLOPTS_SRC} ${src_files}
  PARENT_SCOPE
  )

FILE(GLOB header_files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
INSTALL(
  FILES
  ${header_files}
  DESTINATION include/cyclopts
  COMPONENT cyclopts
)