

INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}"
  )

SET(
  EXCHNG_ANALYSIS_INCLUDE_DIRS ${EXCHNG_ANALYSIS_INCLUDE_DIRS}
  "${CMAKE_CURRENT_SOURCE_DIR}"
  PARENT_SCOPE
  )

SET(
  EXCHNG_ANALYSIS_SRC ${EXCHNG_ANALYSIS_SRC} 
  "${CMAKE_CURRENT_SOURCE_DIR}/distributions.cc"
  PARENT_SCOPE
  )

INSTALL(FILES
  distributions.h
  DESTINATION include/exchng_analysis
  COMPONENT exchng_analysis
)